--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,15 +14,23 @@
 							<div class="col-md-6">
 								<div class="tab-content">
 									
-							<div id="add-post-box"></div>
+							
 
 								
 
 							<ul class="liked-pages2" id="all-pages"></ul>
 
+							<ul class="liked-pages2" id="all-movies"></ul>
+
+							<ul class="liked-pages2" id="all-series"></ul>
 
 
 							</div>
+
+						</div>
+						<div class="col-md-3">
+							
+							<%- include ("includes/friends-widget") %>
 						</div>
 					</div>
 				</div>
@@ -215,6 +223,131 @@
 					
 					var html = "";
 					for (var a = 0; a < response.data.length; a++){
+						
+						var data = response.data[a];
+						html += '<div class="avaliacaopage">';
+						html += '<li>';
+							html += createCommentsSection2(data);
+						html += '<div class="">';
+							
+						html += '<figure>';
+						
+						
+						
+						html += '</figure>';
+
+						if(data.image != ""){
+									html += '<img src="' + mainURL + "/" + data.image + '" style="width: 300px;  object-fit: cover;>';
+								}
+						
+						html += '<div class="page-infos2">';
+							html += '<p>Tipo: <span>' + data.tipo + '</span></p>';
+						html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+						html += '<p> Autor: <span>' + data.autor + '</span></p>';
+						html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
+						html += '<p>Editora: <span>' + data.editora + '</span></p>';
+						html += '<p>País: <span>' + data.pais + '</span></p>';
+						
+						
+
+						
+
+							html += '</div>';						
+							html += '</div>';
+							
+							
+						html += '</div>';
+						html += '</div>';
+						html += '</li>';
+						html += '</div>';
+					}
+					document.getElementById("all-pages").innerHTML = html;
+				}
+			};
+			
+		var formData = new FormData();
+		formData.append("accessToken", localStorage.getItem("accessToken"));
+		ajax.send(formData);		
+		}
+
+
+		var isAvaliacao2 = true;
+		function getAvaliacaoMovie(){
+			var ajax = new XMLHttpRequest();
+			ajax.open("POST", "/getAvaliacaoMovie", true);
+				
+			ajax.onreadystatechange = function(){
+				if(this.readyState == 4 && this.status == 200){
+					var response = JSON.parse(this.responseText);
+					
+					if(response.status == "error"){
+						alert(response.message);
+						return;
+					}
+					
+					var html = "";
+					for (var a = 0; a < response.data.length; a++){
+						var data = response.data[a];
+						html += '<div class="avaliacaopage">';
+						html += '<li>';
+							html += createCommentsSection2(data);
+						html += '<div class="">';
+							
+						html += '<figure>';
+						
+						
+						
+						html += '</figure>';
+
+						if(data.image != ""){
+									html += '<img src="' + mainURL + "/" + data.image + '" style="width: 300px;  object-fit: cover;>';
+								}
+						
+						html += '<div class="page-infos2">';
+							html += '<p>Tipo: <span>' + data.tipo + '</span></p>';
+						html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
+						html += '<p> Diretor: <span>' + data.diretor + '</span></p>';
+						html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
+						html += '<p>Elenco: <span>' + data.elenco + '</span></p>';
+						html += '<p>País: <span>' + data.pais + '</span></p>';
+
+						
+
+						
+
+							html += '</div>';						
+							html += '</div>';
+							
+						html += '</div>';
+						html += '</div>';
+						html += '</li>';
+						html += '</div>';
+					}
+					document.getElementById("all-movies").innerHTML = html;
+				}
+			};
+			
+		var formData = new FormData();
+		formData.append("accessToken", localStorage.getItem("accessToken"));
+		ajax.send(formData);		
+		}
+
+		var isAvaliacao3 = true;
+		function getAvaliacaoSerie(){
+			var ajax = new XMLHttpRequest();
+			ajax.open("POST", "/getAvaliacaoSerie", true);
+				
+			ajax.onreadystatechange = function(){
+				if(this.readyState == 4 && this.status == 200){
+					var response = JSON.parse(this.responseText);
+					
+					if(response.status == "error"){
+						alert(response.message);
+						return;
+					}
+					
+					var html = "";
+					for (var a = 0; a < response.data.length; a++){
 						var data = response.data[a];
 						html += '<div class="avaliacaopage">';
 						html += '<li>';
@@ -233,11 +366,13 @@
 								}
 						
 						html += '<div class="page-infos2">';
+							html += '<p>Tipo: <span>' + data.tipo + '</span></p>';
 						html += '<h4><a href="/page/' + data._id + '">' + data.name + '</a></h4>';
-						html += '<p> Local de publicação: <span>' + data.autor + '</span></p>';
+						html += '<p> Diretor: <span>' + data.diretor + '</span></p>';
 						html += '<p>Ano de publicação: <span>' + data.ano + '</span></p>';
-						html += '<p>URL: <span>' + data.editora + '</span></p>';
-						html += '<p>Resumo: <span>' + data.pais + '</span></p>';
+						html += '<p>Elenco: <span>' + data.elenco + '</span></p>';
+						html += '<p>Número de temporadas: <span>' + data.temporadas + '</span></p>';
+						html += '<p>País: <span>' + data.pais + '</span></p>';
 
 						
 
@@ -251,14 +386,14 @@
 						html += '</li>';
 						html += '</div>';
 					}
-					document.getElementById("all-pages").innerHTML = html;
+					document.getElementById("all-series").innerHTML = html;
 				}
 			};
 			
 		var formData = new FormData();
 		formData.append("accessToken", localStorage.getItem("accessToken"));
 		ajax.send(formData);		
-		}	 
+		}
 		
 
 
